# agent-broker

./: .gitignore  .tagpr  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.gemini  Dockerfile.local  Dockerfile.opencode  Dockerfile.qwen  Dockerfile.whatsapp  HANDOFF-20260414.md  LICENSE  PR-DRAFT.md  README.md  RELEASING.md  bash.exe.stackdump  config-codex.toml  config-copilot.toml  config-gemini.toml  config.toml.example  docker-entrypoint-gemini.sh  fix-all-tasks.ps1  gitx-system-prompt.txt  index.yaml  install-healthcheck.ps1  install-task-codex.ps1  install-task-gemini.ps1  install-tasks.ps1  justfile  openab-healthcheck.ps1  run-openab-claude.bat  run-openab-codex.bat  run-openab-copilot-native.bat  run-openab-copilot.bat  run-openab-gemini.bat  (+3 more)
.backups/: copilot-config.json.bak
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
data/: mcp-registry.json
docs/: agent-installable-tools.md  ai-install-upgrade.md  browser-mcp.md  byocli.md  claude-code.md  codex.md  config-reference.md  copilot-073-test-report.md  copilot.md  cronjob.md  cursor.md  discord-bot-howto.md  discord.md  feishu.md  firecracker.md  gemini.md  gh-auth-device-flow.md  github-token-setup.md  github-webhook-integration.md  google-chat.md  helm-publishing.md  helm-values-reference.md  kiro.md  line.md  local-dev.md  message-dispatch-modes.md  messaging.md  msteams-enterprise.md  msteams-selfhosted.md  msteams.md  multi-agent.md  ollama.md  openab-upgrade-sop.md  opencode.md  qwen.md  (+13 more)
(+178 files in other folders)
